src/test/resources/failing/fail42.pnd
template Foo<A> {
    P(x) : int
    @type Animal
    A.Z(x) : int
}
Foo<_> as F1
